<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundAll"
    tools:context=".CompanyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_of_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:hint="@string/enter_name_of_company" />

        <EditText
            android:id="@+id/surname_director"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:hint="@string/enter_surname_director" />

        <EditText
            android:id="@+id/surname_chief_accountant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:hint="@string/enter_surname_chief_accountant" />

        <Button
            android:id="@+id/create_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:text="@string/create_company"
            android:background="@drawable/buttonshape"
            android:onClick="onClickAddCompany"/>

        <Button
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:onClick="onSendMessage"
            android:background="@drawable/buttonshape"
            android:text="@string/back" />

</LinearLayout>
</LinearLayout>


