<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackgroundAll"
    tools:context=".ChooseEmployeeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorBackgroundAll"
        android:layout_weight="1">

    <TextView
        android:id="@+id/choose_employee_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@color/colorBackgroundAll"
        android:hint="@string/choose_employee_text">
    </TextView>

        <ListView
            android:id="@+id/choose_employee_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:background="@drawable/buttonshape"></ListView>
    </LinearLayout>
        <Button
            android:id="@+id/back_to_month_and_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:onClick="onBackToMonthAndYear"
            android:background="@drawable/buttonshape"
            android:text="@string/back_to_month_and_year" >
        </Button>
    <Button
        android:id="@+id/go_to_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:onClick="onClickGoToSelectionResult"
        android:background="@drawable/buttonshape"
        android:text="@string/go_to_result">
    </Button>

        </LinearLayout>
